--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: url('https://www.google.com/imgres?q=cute%20penguin%20cartoon&imgurl=https%3A%2F%2Fwww.shutterstock.com%2Fimage-vector%2Fcute-penguin-cartoon-vector-happy-600nw-2527129089.jpg&imgrefurl=https%3A%2F%2Fwww.shutterstock.com%2Fsearch%2Fcartoon-cute-penguin&docid=Ycn00v7mQ7EpTM&tbnid=R1Gx1JB7pMzDMM&vet=12ahUKEwjGzMvx1s6MAxVCIjQIHbleIpIQM3oECEsQAA..i&w=600&h=600&hcb=2&ved=2ahUKEwjGzMvx1s6MAxVCIjQIHbleIpIQM3oECEsQAA') no-repeat center center fixed;
+  background: url('https://www.shutterstock.com/image-vector/cute-penguin-cartoon-vector-happy-600nw-2527129089.jpg') no-repeat center center fixed;
   background-size: cover;
   font-family: 'Arial', sans-serif;
   display: flex;
